@@ -1,3 +1,7 @@
+2011-06-30  Marek Polacek  <mpolacek@redhat.com>
+
+	* iconvdata/johab.c: Don't inline `johab_sym_hanja_to_ucs' function.
+
 2011-06-21  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/s390/s390-64/Makefile ($(inst_gconvdir)/gconv-modules):
